BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Contract_Line_vod__c.object
<CustomObject>
    <description>Child of the Contract_vod object. Holds target information of selected product(s), and is associated to a Contract.</description>
    <fields>
        <fullName>Comments_HCPTS__c</fullName>
        <description>Place to put comments; for eg size, location, duration for Exhibits &amp; Display</description>
        <inlineHelpText>Place to put comments; for eg size, location, duration for Exhibits &amp; Display</inlineHelpText>
        <label>Additional Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_vod__c</fullName>
        <description>Lookup to corresponding Contract Header.</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR ( NOT (2 OR 4))</booleanFilter>
            <errorMessage>Contract Line record type does not match Contract record type.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipName>Contract_Lines_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_By_HCTPS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+CreatedById, CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(DAY(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type_vod__c</fullName>
        <description>Used to capture the device used to generate the record.</description>
        <label>Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>iPad_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WinModern_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data_Load_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EM_Rate_Type_vod__c</fullName>
        <description>Indicates the rate type for a service. This field is only used by Veeva Event Management.</description>
        <label>Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hour_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EM_Rate_vod__c</fullName>
        <description>Indicates the rate for the service or Amount. This field is only used by Veeva Event Management.</description>
        <inlineHelpText>Rate is usually for hourly services. In all other cases, this is the total Amount for the Event and/or Maximum cap Sponsorship Amount for Actual Registration Fees, Reasonable Accommodation, Reasonable Travel Fees, Reasonable Meals, Other</inlineHelpText>
        <label>Rate or Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End date when the contract line is valid.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Reimburseable_Topic_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fee/Reimbursable Topic</description>
        <inlineHelpText>Fee/Reimbursable Topic</inlineHelpText>
        <label>Fee/Reimbursable Topic</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4) OR (2 AND 3 AND 5)</booleanFilter>
            <filterItems>
                <field>EM_Catalog_vod__c.Category_HCPTS__c</field>
                <operation>equals</operation>
                <value>Fee, Reimbursable, Deduction</value>
            </filterItems>
            <filterItems>
                <field>EM_Catalog_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Speaker_Service_vod</value>
            </filterItems>
            <filterItems>
                <field>EM_Catalog_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Framework Agreement</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Framework Agreement</value>
            </filterItems>
            <infoMessage>Users may only select Approved Speaker Service Topics of category Fee/Reimbursable/Deduction</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>EM_Catalog_vod__c</referenceTo>
        <relationshipLabel>Fee/Reimbursables (Fee/Reimbursable Topic)</relationshipLabel>
        <relationshipName>Fee_Reimburseables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_HCPTS__c</fullName>
        <description># of Hours contracted for this service</description>
        <inlineHelpText># of Hours contracted for this service. Only applicable if Rate type is Hourly. Not applicable for Sponsorships and Service Descriptions</inlineHelpText>
        <label>Hours</label>
        <picklist>
            <controllingField>EM_Rate_Type_vod__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IM_Consumer_Price_vod__c</fullName>
        <description>Contract Line corresponding field to Consumer_Price_vod in IM Lines.</description>
        <label>IM Consumer Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM_Facings_horizontal_vod__c</fullName>
        <description>Contract Line corresponding field to Horizontal_vod in IM Lines.</description>
        <label>IM Horizontal</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Facings_simple_vod__c</fullName>
        <description>Contract Line corresponding field to Facings_vod in Inventory Monitoring Line.</description>
        <label>IM Facings</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Facings_vertical_vod__c</fullName>
        <description>Contract Line corresponding field to Vertical_vod in IM Lines.</description>
        <label>IM Vertical</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Inventory_vod__c</fullName>
        <description>Contract Line corresponding field to Inventory_vod in IM Lines.</description>
        <label>IM Inventory</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Layer_vod__c</fullName>
        <description>Contract Line corresponding field to Layer in IM Lines.</description>
        <label>IM Layer</label>
        <picklist>
            <picklistValues>
                <fullName>Above_eye_level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eye_level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below_eye_level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IM_Moved_Goods_vod__c</fullName>
        <description>Contract Line corresponding field to Moved_Goods_vod in IM Lines.</description>
        <label>IM Moved Goods</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Position_vod__c</fullName>
        <description>Contract Line corresponding field to Position_vod in IM Lines.</description>
        <label>IM Position</label>
        <picklist>
            <picklistValues>
                <fullName>Front_of_counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back_of_counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open_shelf</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Fee_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by a before trigger to true if Service_vod.Category_HCTPS = &quot;Fee&quot;</description>
        <inlineHelpText>Checked by a before trigger to true if Service_vod.Category_HCTPS = &quot;Fee&quot;</inlineHelpText>
        <label>Is Fee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Contract Line is a Service Description, please check this box</description>
        <inlineHelpText>If this Contract Line is a Service Description, please check this box</inlineHelpText>
        <label>This is a Service Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sponsorship_HCPTS__c</fullName>
        <description>If Contract.Sponsorship Category is Not Applicable, this value results to false/unchecked. Else  this is true signifying that this Contract applies to a Sponsorship</description>
        <formula>IF(
OR(
ISPICKVAL(Contract_vod__r.Sponsorship_Category_HCPTS__c, &apos;Not Applicable&apos;), 
ISPICKVAL(Contract_vod__r.Sponsorship_Category_HCPTS__c, &apos;&apos;)
),

false, true)</formula>
        <inlineHelpText>If Contract.Sponsorship Category is Not Applicable, this value results to false/unchecked. Else  this is true signifying that this Contract applies to a Sponsorship</inlineHelpText>
        <label>Is this a Sponsorship Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_HCPTS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+LastModifiedById, LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the record cannot be edited.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandatory_Contract_Line_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the Contract Line is required.</description>
        <label>Mandatory Contract Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <picklist>
            <controllingField>EM_Rate_Type_vod__c</controllingField>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Contract Line was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Date and time the Contract Line was last modified on the mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes_vod__c</fullName>
        <description>Allows to capture comments for the contract line.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OM_List_Amount_Achieved_vod__c</fullName>
        <description>Calculated by batch job. Shows progress against the defined target.</description>
        <label>OM List Amount Achieved</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_List_Amount_Remaining_vod__c</fullName>
        <description>Shows remaining list amount to reach the defined target (target minus achieved).</description>
        <formula>OM_List_Amount_Target_vod__c - OM_List_Amount_Achieved_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OM List Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_List_Amount_Target_vod__c</fullName>
        <description>Contract Line corresponding field to List_Amount_vod in OM and OM Lines.</description>
        <label>OM List Amount Target</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Net_Amount_Achieved_vod__c</fullName>
        <description>Calculated by batch job. Shows progress against the defined target.</description>
        <label>OM Net Amount Achieved</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Net_Amount_Remaining_vod__c</fullName>
        <description>Shows remaining net amount to reach the defined target (target minus achieved).</description>
        <formula>OM_Net_Amount_Target_vod__c - OM_Net_Amount_Achieved_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OM Net Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Net_Amount_Target_vod__c</fullName>
        <description>Contract Line corresponding field to Net_Amount_vod in OM and OM Lines.</description>
        <label>OM Net Amount Target</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Quantity_Achieved_vod__c</fullName>
        <description>Calculated by batch job. Shows progress against the defined target.</description>
        <label>OM Quantity Achieved</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Quantity_Remaining_vod__c</fullName>
        <description>Shows remaining quantity to reach the defined target (target minus achieved).</description>
        <formula>OM_Quantity_Target_vod__c - OM_Quantity_Achieved_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OM Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Quantity_Target_vod__c</fullName>
        <description>Contract Line corresponding field to Quantity_vod in OM and OM Lines.</description>
        <label>OM Quantity Target</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a non-Admin User to make changes to a Contract Line records associated with Activated Contracts. This is only intended for integration and/or custom pages/coding and should not be placed on the page layout.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Identifier_vod__c</fullName>
        <description>This is a pull-in field that allows the display of the Product Identifier field from the Product Catalog object on Contract Lines.</description>
        <label>Product Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filtered lookup to products of type Detail, Order, or Product Group.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR ( NOT (2 OR 4))</booleanFilter>
            <filterItems>
                <field>Product_vod__c.Product_Type_vod__c</field>
                <operation>equals</operation>
                <value>Detail, Order, Product Group</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales_vod</value>
            </filterItems>
            <filterItems>
                <field>Product_vod__c.Product_Type_vod__c</field>
                <operation>equals</operation>
                <value>Inventory Monitoring</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>Contract_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Category_HCPTS__c</fullName>
        <description>Trigger stamps the Contract_Line.Category_HCPTS field to this field</description>
        <inlineHelpText>Trigger stamps the Contract_Line.Category_HCPTS field to this field</inlineHelpText>
        <label>Service Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name_vod__c</fullName>
        <description>The name of the service included in the speaker contract</description>
        <formula>Service_vod__r.Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee/Reimbursable Topic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The service included in the speaker contract.</description>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Catalog_vod__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Speaker_Service_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Catalog_vod__c</referenceTo>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Amount_Reason_HCPTS__c</fullName>
        <description>Describes what the Rate/Amount field is for when it comes to Sponsorships. Sponsorship Category must be chosen for this to be available/applicable.</description>
        <inlineHelpText>Describes what the Rate/Amount field is for when it comes to Sponsorships. Sponsorship Category must be chosen for this to be available/applicable.</inlineHelpText>
        <label>Sponsorship Amount Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Actual Registration Fees</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reasonable Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reasonable Travel Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reasonable Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start date when the contract line is valid.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>IF(
    ISPICKVAL(EM_Rate_Type_vod__c, &quot;Hour_vod&quot;),
    IF(Isblank(Text(Minutes__c)),
        Value(Text(Hours_HCPTS__c)) * EM_Rate_vod__c,
        Value(Text(Hours_HCPTS__c)) * EM_Rate_vod__c + (Value(Text(Minutes__c))/60 * EM_Rate_vod__c)
    ),
    EM_Rate_vod__c
)</formula>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Fee/Reimbursable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>External_ID_vod__c</columns>
        <columns>Contract_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000000000}</displayFormat>
        <label>Fee/Reimbursable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee/Reimbursables</pluralLabel>
    <recordTypes>
        <fullName>Activity_Agreement_EBD</fullName>
        <active>true</active>
        <description>Activity Agreement for Exhbits &amp; Displays (Events)</description>
        <label>Activity Agreement for Exhibits &amp; Displays (Events)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Agreement_Services</fullName>
        <active>true</active>
        <description>Corresponding Contract Line record type for Contract_vod</description>
        <label>Activity Agreement for Services (SOW)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Agreement_Sponsorship</fullName>
        <active>false</active>
        <description>Activity Agreement for Sponsorship</description>
        <label>Activity Agreement for Sponsorship</label>
    </recordTypes>
    <recordTypes>
        <fullName>EM_Speaker_Contract_vod</fullName>
        <active>true</active>
        <description>Used to define the list of services that are covered by a contract with a speaker.</description>
        <label>EM_Speaker_Contract_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Framework_Agreement</fullName>
        <active>true</active>
        <label>Framework Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Listing_vod</fullName>
        <active>true</active>
        <description>Used to record contractual obligations for Inventory Monitoring data, such as product placement and moved inventory.</description>
        <label>Listing_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_vod</fullName>
        <active>true</active>
        <description>Used to record contractual obligations for product quantities and values pertaining to Orders.</description>
        <label>Sales_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>SponsorshipLetter_HCPTS</fullName>
        <active>true</active>
        <description>Rectype for COntract rectype of SponsorshipLetter_HCPTS</description>
        <label>SponsorshipLetter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hours_required_for_Hour_Rate_Type</fullName>
        <active>true</active>
        <description>If Rate type is Hourly, hours must be specified</description>
        <errorConditionFormula>AND(  ISPICKVAL( EM_Rate_Type_vod__c ,&apos;Hour_vod&apos;) ,  
ISPICKVAL(Hours_HCPTS__c,&apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>Hours_HCPTS__c</errorDisplayField>
        <errorMessage>If Rate type is Hourly, hours must be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_No_Fees_then_No_Rated_Contract_Lines</fullName>
        <active>true</active>
        <description>If No Fees is checked, there can be no Contract Lines with Rate information</description>
        <errorConditionFormula>AND ( Contract_vod__r.No_Fees_are_to_be_Paid_HCPTS__c,  EM_Rate_vod__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>EM_Rate_vod__c</errorDisplayField>
        <errorMessage>&quot;No Fees are to be Paid&quot; Checkbox has been selected and you may not add Contract Lines with Rate information to this Contract. Uncheck the &quot;No Fees are to be Paid&quot; checkbox  on the Contract to proceed further.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_cannot_be_blank_or_zero</fullName>
        <active>false</active>
        <description>Rate may be blank or non-zero positive number</description>
        <errorConditionFormula>AND( NOT(ISBLANK(EM_Rate_vod__c)), EM_Rate_vod__c &lt;= 0 )</errorConditionFormula>
        <errorDisplayField>EM_Rate_vod__c</errorDisplayField>
        <errorMessage>Rate may be blank or non-zero positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Topic_Contract_Type_Not_Compatible</fullName>
        <active>false</active>
        <description>The Contract Type on the Fee/Reimbursable topic must match Contract Type on Parent Contract</description>
        <errorConditionFormula>and (RecordType.DeveloperName  &lt;&gt; &apos;Framework_Agreement&apos;,
TEXT(Contract_vod__r.Service_Type_HCPTS__c ) &lt;&gt;  TEXT(Fee_Reimburseable_Topic_HCPTS__r.Service_Type_HCPTS__c))</errorConditionFormula>
        <errorDisplayField>Fee_Reimburseable_Topic_HCPTS__c</errorDisplayField>
        <errorMessage>Error: The contract sub type for the  Fee/Reimbursable topic selected must match the contract subtype in the Parent Contract.</errorMessage>
    </validationRules>
</CustomObject>